--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<ul>
 						<li class = "fragment">Lai Duc Minh: report writer</li>
 						<li class = "fragment">Nguyen Quoc Hoang: programmer</li>
-						<li class = "fragment">Dinh Thanh Ha: co-programmer, slide designer/deployer</li>
+						<li class = "fragment">Dinh Thanh Ha: programmer, slide designer/deployer</li>
 					</ul>
 
 				</section>
