--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 				<section>
 					<section>
-						<p class = "left=align">Check if the line have a certain length (winLength)</p> 
+						<p class = "left-align">Check if the line have a certain length (winLength)</p> 
 						<pre><code data-trim data-noescape data-line-numbers data-ln-start-from="68"> 
 							private boolean checkLine(int row, int col, int dr, int dc, int player) {
 								for (int i = 0; i < winLength; i++) {
